--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+
+/* GERAL */
+
 @import url('https://fonts.cdnfonts.com/css/wise');
 * {
     padding: 0;
@@ -13,6 +16,7 @@
   --green-hover: #c1f1a3;
   --blue-light: #A0E1E1;
   --blue-transparent: #16330014;
+  --green-transparent: #285009;
   --black-700: #0e0f0c;
   --black-green: #163300;
   --gray-500: rgba(85, 85, 85, 0.55);
@@ -23,13 +27,16 @@
 body {
    height: 500vh;
 }
+
+/* HEADER */
+
 header {
-    padding: 1.5rem 4%;
+    padding: 1.5rem 6%;
     background-color: var(--black-green);
     color: var(--green-ligth);
     display: flex;
     justify-content: space-between;
-    border-bottom: solid 0.5px;
+    border-bottom: solid 0.1px;
     border-color: var(--green-ligth);
     position: fixed; 
     top: 0; 
@@ -45,7 +52,7 @@ header {
 
 .logo {
     font-family: var(--font-primary);
-    font-size: 36px;
+    font-size: 32px;
     color: var(--green-ligth);
     align-items: center;
     display: flex;
@@ -76,7 +83,7 @@ header {
 }
 .menu-link:hover {
    padding: 10px;
-    background: #285009;
+    background: var(--green-transparent);
     border-radius: 15px;
 }
 
@@ -94,6 +101,8 @@ header {
     filter: brightness(1.3);
 }
 
+/* MAIN */
+
 .hero__container {
     padding: 1.5rem 4%;
     text-align: center;
@@ -101,7 +110,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 800px;
+    max-width: 1200px;
  
   }
   
@@ -121,9 +130,9 @@ header {
     color: var(--green-ligth);
     font-family: var(--font-primary);
     font-weight: 700;
-    font-size: 3.5rem;
+    font-size: 7rem;
     text-align: center;
-    margin-top: 3.2rem;
+    margin-top: 5rem;
     
   }
   
@@ -143,7 +152,7 @@ header {
     text-align: center;
   }
   
-  .btn-watch {
+  .open-acount {
     border: none;
     background: var(--green-ligth);
     padding: 8px 30px;
@@ -151,15 +160,18 @@ header {
     justify-content: center;
     align-items: center;
     gap: 1.6rem;
-    color: var(--black-green);
     border-radius: 40px;
     font-family: var(--font-secondary);
     font-weight: 700;
     line-height: 2.2rem;
     cursor: pointer;
   }
+  .open-acount a {
+    text-decoration: none;
+    color: var(--black-green);
+  }
   
-  .btn-moreInfo {  
+  .link-moreInfo {  
     padding: 1.2rem 2.4rem;
     display: flex;
     justify-content: center;
@@ -173,24 +185,31 @@ header {
     cursor: pointer;
     position: relative;
   }
-  .btn-moreInfo::after {
+  .link-moreInfo::after {
     content: " ";
-    width: 0;
+    width: 80%;
     height: 0.2rem;
     background-color: var(--green-ligth);
     position: absolute;
     top: 3.0rem;
     left: 35px;
     border-radius: 3.1rem;
-    width: 80%;
-      
   }
   
-  .btn-moreInfo:hover {
+  .link-moreInfo:hover {
     filter: brightness(1.3);
 
   }
   
-  .btn-watch:hover {
+  .open-acount:hover {
     filter: brightness(1.3);
   }
+  .img-hero{
+    background-color: var(--black-green);
+  }
+  .img-banner img {
+    margin-bottom: -3.5rem;
+    padding: 1.5rem 4%;
+    position: relative;
+    width: 100%; 
+}
