--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,21 +30,19 @@ body {
 
 /* HEADER */
 
-header {
+.menu-desktop {
   padding: 1.5rem 6%;
   background-color: var(--black-green);
   color: var(--green-ligth);
   display: flex;
   justify-content: space-between;
-  border-bottom: solid 0.1px;
-  border-color: var(--green-ligth);
   position: fixed; 
   top: 0; 
   width: 100%; 
   z-index: 99999;
 }
 
-.containner {
+.menu-left {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -100,6 +98,40 @@ header {
   filter: brightness(1.3);
 }
 
+/* ESTILO DO MENU MOBILE */
+.btn-sandwich button {
+  display: none;
+  padding: 10px;
+  background-color: var(--green-transparent);
+  border: none;
+  border-radius: 50%;
+}
+.mobile-menu {
+  display: none;
+  background: var(--gray-100);
+  height: 100vh;
+  width: 100vh;
+  position: fixed;
+  z-index: 10000;
+  padding: 1.2rem 6%;
+  margin-top: 1.5rem;
+  text-align: left;
+}
+.mobile-menu nav ul li {
+  list-style: none;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 300;
+  padding-top: 2.5rem;
+}
+.mobile-menu nav ul li a{
+  text-decoration: none;
+  color: var(--black-700);
+  text-align: left;
+}
+.open-menu{
+  display: block;
+}
 /* MAIN */
 
 .hero__container {
@@ -132,7 +164,6 @@ header {
     font-size: 7rem;
     text-align: center;
     margin-top: 5rem;
-    
   }
   
   .btn__container {
@@ -152,6 +183,7 @@ header {
   }
   
   .open-acount {
+
     border: none;
     background: var(--green-ligth);
     padding: 8px 30px;
@@ -171,7 +203,6 @@ header {
   }
   
   .link-moreInfo {  
-    padding: 1.2rem 2.4rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -186,12 +217,11 @@ header {
   }
   .link-moreInfo::after {
     content: " ";
-    width: 80%;
+    width: 100%;
     height: 0.2rem;
     background-color: var(--green-ligth);
     position: absolute;
-    top: 3.0rem;
-    left: 35px;
+    top: 2.3rem;
     border-radius: 3.1rem;
   }
   
@@ -211,4 +241,44 @@ header {
     padding: 1.5rem 4%;
     position: relative;
     width: 100%; 
+}
+@media screen and (max-width: 1200px) {
+  .hero__title {
+    display: flex;
+    justify-content: center;
+    color: var(--green-ligth);
+    font-family: var(--font-primary);
+    font-weight: 700;
+    font-size: 4rem;
+    text-align: center;
+    margin-top: 5rem;
+  }
+}
+@media screen and (max-width: 992px) {
+  .btn-sandwich button{
+    display: block;
+  }
+  .menu-desktop {
+    border-bottom: solid 0.1px;
+    border-color: var(--green-ligth);
+  }
+  .menu-desktop nav {
+    display: none;
+  }
+
+  .mobile-menu ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: right;
+    text-align: center;
+  }
+  .mobile-menu ul li{
+    padding-top: 1.2rem;
+  }
+  @media screen and (max-width: 430px) {
+    .link-moreInfo {  
+      font-size: .8rem;
+    }
+  }
 }
