--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -1,57 +1,103 @@
-body{
-    font-family: Arial, sans-serif;
-    background-color: 
-    #9FE870;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+body {
+    font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    color:#0E0F0C
 }
 
-h1 {
-    color: #163300 ;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-form {
+.page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
     width: 100%;
-    max-width: 400px;
+    height: 100vh;
+    /*background-color:  #FFC091;*/
+    background-image: url('./img/fundo6.png');
+    background-size: cover ;
+
+}
+
+.formRegistration {
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: auto; 
-    margin-top: 250px;
-    margin-bottom: 250px;
+    border-radius: 7px;
+    padding: 40px;
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
+    gap: 5px
 }
 
-/* Espaço entre os elementos as entradas do formulário*/
-label {
-    display:block;
-    margin-bottom: 8px;
+.areaRegistration img {
+    width: 420px;
 }
 
-/* Tamanho da caixa de texto do formulario*/
-input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    border-radius: 10px
+.formRegistration h1 {
+    padding: 0;
+    margin: 0;
+    font-weight: 500;
+    font-size: 2.3em;
 }
 
-button {
-    width: 100%;
-    background-color:#163300;
+.formRegistration p {
+    display: inline-block;
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 25px;
+}
+
+.formRegistration input {
+    padding: 15px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    margin-top: 5px;
+    border-radius: 4px;
+    transition: all linear 160ms;
+    outline: none;
+}
+
+
+.formRegistration input:focus {
+    border: 1px solid #f72585;
+}
+
+.formRegistration label {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.formRegistration  a {
+    display: inline-block;
+    margin-bottom: 20px;
+    font-size: 13px;
+    color: #555;
+    transition: all linear 160ms;
+}
+
+.formRegistration  a:hover {
+    color: #260A2F;
+}
+
+.btn {
+    background-color:  #163300;
     color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    border: none !important;
+    transition: all linear 160ms;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    margin: 0 !important;
+
 }
 
-button:active {
-    background-color: #9FE870; /* Cor alternativa quando o botão é clicado */
-    color:#454745 ;
+.btn:hover {
+    transform: scale(1.05);
+    background-color: 
+  #9FE870;
+
 }
