--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -17,7 +17,7 @@ body {
     width: 100%;
     height: 100vh;
     /*background-color:  #FFC091;*/
-    background-image: url('assets/img/fundo6.png');
+    background-image: url('./img/fundo6.png');
     background-size: cover ;
 
 }
