--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -16,7 +16,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background-image: url('./assets/img/backgound/fundo5.png');
+    background-image: url('../img/fundo6.png');
     background-size: cover ;
     /*background-color: 
     #121511;;*/
