--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
@@ -17,7 +16,7 @@ body {
     width: 100%;
     height: 100vh;
     /*background-color:  #FFC091;*/
-    background-image: url('../img/fundo6.png');
+    /*background-image: url('../img/fundo6.png');*/
     background-size: cover ;
 
 }
