--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -16,7 +16,7 @@ body {
     width: 100%;
     height: 100vh;
     /*background-color:  #FFC091;*/
-    /*background-image: url('../img/fundo6.png');*/
+    background-image: url('../img/fundo6.png');
     background-size: cover ;
 
 }
@@ -62,7 +62,7 @@ body {
 
 
 .formRegistration input:focus {
-    border: 1px solid #f72585;
+    border: 1px solid rgba(85, 85, 85, 0.55);
 }
 
 .formRegistration label {
@@ -100,3 +100,36 @@ body {
   #9FE870;
 
 }
+
+
+  .loading-screen {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 999;
+  }
+  
+  .loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+  .content {
+    padding: 20px;
+  }
+  
