--- a/assets/css/transferencia.css
+++ b/assets/css/transferencia.css
@@ -1,23 +1,643 @@
-#overlay {
-    display: none;
+@import url('https://fonts.cdnfonts.com/css/wise');
+
+/* ESTILO GERAL */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  :root{
+    font-size: 62.5%;
+    --green-gradient: linear-gradient(180deg, #278848 0%, #59a928 100%);
+    --white: #fff;
+    --gray-400: #e8ebe6;
+    --gray-100: #fafafa;
+    --green-ligth: #9fe870;
+    --green-hover: #c1f1a3;
+    --blue-light: #A0E1E1;
+    --blue-transparent: #16330014;
+    --green-transparent: #285009;
+    --black-700: #0e0f0c;
+    --black-green: #163300;
+    --gray-500: rgba(85, 85, 85, 0.491);
+    --dove-gray-900: #3d3d3d;
+    --font-primary: 'WISE', sans-serif;
+    --font-secondary: 'Poppins', sans-serif;
+  }
+  
+  body{
+    font-family: var(--font-secondary);
+    font-size: 16px; /* Ajuste conforme necessário */
+  }
+  .interface{
+    padding: 2.5rem 4% ;
+    
+  }
+  
+  
+  /*  NAVBAR */
+  
+  header{
+    width: 100%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     position: fixed;
+    height: 7rem;
+    z-index: 99997;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
-}
-
-#modal {
+    transition: .5s;
+    background-color: #163300;
+  }
+  header.rolagem {
+    background-color: #212121;
+    box-shadow: 0px 2px 10px #070707;
+    
+  }
+  header > .interface{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 4%;       
+  }
+  .logo img{
+    width: 25rem;   
+  }
+  .menu--desktop ul{
+    display:flex ;
+     list-style: none;  
+  }
+  .nav--itens{        
+    padding: 0rem 2.4rem;
+  }
+  .nav--link{
+    text-decoration: none;
+    color: #989696;       
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    position: relative;     
+  }
+  .nav--link:hover{
+    color: #fff;
+  }
+  .nav--link::after{
+    content: " ";
+    width: 0;
+    height: 0.3rem;
+    background-image: linear-gradient(180deg, #278848 0%, #59A928 100%);
+    position: absolute;
+    top: 2.4rem;
+    left: 30px;
+    border-radius: 3.1rem;
+    transition: width 0.5s  ;
+  }
+  .nav--link:hover::after{
+    width: 65%;
+  }
+  .nav--active{
+    color: #fff;
+    position: relative;
+    
+  }
+  .nav--active::after{
+    content: " ";
+    width: 65%;
+    height: 0.3rem;
+    background-image: linear-gradient(180deg, #278848 0%, #59A928 100%);
+    position: absolute;
+    top: 2.4rem;
+    left: 30px;
+    border-radius: 3.1rem;
+   
+  }
+  .nav--link i{
+    font-size: 1.5rem;
+    margin-right: 0.8rem;
+  
+  }
+  
+  /* MENU MOBILE */
+  
+  .btn--open{
     display: none;
+  }
+  .btn--open i{
+    color: #59a928;
+    font-size: 40px;
+  }
+  .btn--close{
+    padding: 20px 5%;
+  }
+  .btn--close i{
+    font-size: 30px;
+    color: #59a928;
+  }
+  .menu--mobile{
+    display: none;
+    background-color: #212121;
+    height: 100vh;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    width: 0%;
+    overflow: hidden;
+    transition: .2s;
+  }
+  .menu--mobile.open--menu{
+    width: 70% ;
+  }
+ 
+  .menu--mobile nav ul{
+    text-align: right;
+    
+  }
+  .menu--mobile nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    display: block;
+    padding: 30px 8%;
+    
+  }
+  .menu--mobile nav ul li a:hover{
+    background-color: #59a928;
+    color: #000;
+  }
+  .menu--mobile nav ul li a i{
+    margin-left: 1.3rem; 
+  }
+ 
+  /* MAIN */
+  main{
+    font-family: 'Montserrat', sans-serif;
+    }
+  main > .interface{
+    padding: 2.5rem 4% ;
+    }
+
+  h2.title{
+    color: var(--dove-gray-900);
+    font-size: 3.2rem;
+    text-align: left;
+    text-shadow: 0px 1px 3px #ffffff ;
+    font-weight: 400;
+    margin: auto;
+  }
+  h2.title span{
+    position: absolute;
+  }
+  
+  h2.title span::after{
+    content: " ";
+    width: 100px;
+    height: 0.5rem;
+    background-image: linear-gradient(180deg, #278848 0%, #59A928 100%);
+    position: absolute;
+    top: 1.5rem;
+    left: 10px;
+    border-radius: 3.1rem;
+  }
+  .box--container{
+    max-width: 1280px;  
+    display: grid;
+    margin: auto;
+    grid-template-columns: repeat(auto-fit,minmax(180px,auto));
+    gap: 2rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+  .box{
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  box-shadow: #070707 5px 5px 12px;
+  background-color: #3d3d3d;
+  position: relative;
+  overflow: hidden;
+  }
+  .box img{
+    width: 100%;
+    height:85%;
+    object-fit: cover;
+    cursor: pointer;
+  }
+  .box--info{
+  color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.3rem 2.3rem 2.5rem 2rem;
+  letter-spacing: 0.5px;
+  margin-bottom: 20px;
+  font-size: 8px;
+  
+  }
+  .box--info span{
+  background-color: #18171c;
+  padding: .8rem .5rem;
+  border-radius: 3px;
+  font-weight: bold;
+  margin-left: 10px;
+  align-items: center;
+  justify-content: center;
+  }
+  .box--info span.green{
+  color: lightgreen;
+  }
+  .box--info span.orange{
+  color: orange;
+  }
+  .box--info span.red{
+  color: red;
+  }
+  .box--overview{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: #fff;
-    padding: 20px;
-    border: 1px solid #ccc;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 2;
-}
+    padding: 2.3rem;
+    max-height: 100%;
+    transform: translateY(101%);
+    }
+    .box:hover .box--overview{
+    transform: translateY(0);
+    }
+    .know-more{
+    background-color: #59A928;
+    color: #fff;
+    font: 1.1rem;
+    font-weight: bold;
+    border: 0;
+    border-radius: 50px;
+    padding: 0.3rem 0.8rem;
+    margin-top: 1rem;
+    cursor: pointer;
+    }
+
+    .main{
+      height: 800px;
+    }
+
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        
+    }
+
+    #saldos {
+        display: flex;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+        margin-top: 100px;
+        margin-bottom: 100px;
+      }
+      
+      .card-saldo {
+        width: 200px;
+        border-radius: 35px;
+        border-color: #18171c;
+        margin: 10px;
+        transition: transform 0.3s ease;
+        box-sizing: border-box;
+      }
+      
+      /* Adicione estilos para o conteúdo dentro dos cards */
+      .card-saldo .card-body {
+        padding: 15px;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        background-color: #fff;
+        height: 70px;
+      }
+      
+      /* Adicione estilos para a descrição no card */
+      .card-saldo .descricao-saldo {
+        font-weight: bold;
+        color: #333;
+      }
+      
+      /* Adicione estilos para os valores no card */
+      .card-saldo .valor-saldo {
+        font-size: 1.3em;
+        color: #555;
+      }
+      
+      .card-text {
+        font-size: medium;
+      }
+
+
+      .loginForm {
+        display: flex;
+        flex-direction: column;
+        background-color: #fff;
+        border-radius: 7px;
+        padding: 40px;
+        box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
+        gap: 30px; /* Aumentei o espaçamento entre os elementos */
+        max-width: 200px; /* Defini uma largura máxima para o formulário */
+        margin: 0 auto; /* Centralizei o formulário na tela */
+    }
+    
+    .areaLogin img {
+        width: 420px;
+    }
+    
+    .loginForm h1 {
+        padding: 0;
+        margin: 0;
+        font-weight: 500;
+        font-size: 2.3em;
+    }
+    
+    .loginForm p {
+        display: inline-block;
+        font-size: 14px;
+        color: #666;
+        margin-bottom: 25px;
+    }
+    
+    .loginForm input {
+        padding: 15px;
+        font-size: 14px;
+        border: 1px solid #ccc;
+        margin-bottom: 20px;
+        margin-top: 5px;
+        border-radius: 4px;
+        transition: all linear 160ms;
+        outline: none;
+    }
+    
+    
+    .loginForm input:focus {
+        border: 1px solid#454745;
+    }
+    
+    .loginForm label {
+        font-size: 14px;
+        font-weight: 600;
+    }
+    
+    .formLogin a {
+        display: inline-block;
+        margin-bottom: 20px;
+        font-size: 13px;
+        color: #555;
+        transition: all linear 160ms;
+    }
+    
+    .formLogin a:hover {
+        color:  #163300;
+    }
+    
+    .btn {
+    
+        background-color: var(--green-ligth);
+        color:var(--black-green);
+        font-size: 14px;
+        font-weight: 600;
+        border: none !important;
+        transition: all linear 160ms;
+        cursor: pointer;
+        margin: 0 !important;
+        padding: 8px 20px !important;
+        border-radius: 15px !important;
+        text-decoration: none;
+    }
+    
+    .btn:hover {
+        transform: scale(1.05);
+        filter: brightness(1.3);
+        background-color: 
+        #9FE870;
+    
+    }
+    
+      
+  
+  /* Adicione um espaço considerável entre o formulário e os cards */
+  #formulario-transferencia {
+    margin-bottom: 30px;
+  }
+
+    .form-group {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 8px;
+        font-weight: bold;
+    }
+
+    input, select, textarea {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 15px;
+        border: 1px solid #ccc;
+        border-radius: 5px; /* Adiciona bordas arredondadas */
+        box-sizing: border-box;
+    }
+
+    select {
+        cursor: pointer;
+    }
+
+    textarea {
+        height: 40px; /* Ajuste a altura conforme necessário */
+        resize: vertical; /* Permite redimensionamento vertical */
+    }
+
+    button {
+        padding: 10px;
+        background-color: #4caf50;
+        color: white;
+        border: none;
+        border-radius: 5px; /* Adiciona bordas arredondadas */
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #45a049;
+    }
+
+    #conteudo{
+        margin-top: 20px
+    }
+  
+
+  /* Footer */
+  
+  footer > .interface{
+    background-color:var(--black-green);
+    box-shadow: 0 0 10px 2px #070707;
+    padding: 2.5rem 4%;
+    font-family: 'Montserrat', sans-serif;
+  }
+  .logo--footer{
+    align-items: center;
+    text-align: center;
+  }
+  .logo--footer img{
+    width: 250px;
+  }
+  .coders{       
+    width: 100%;
+    padding: 1.8rem;
+    background-color:var(--black-green);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3.8rem;
+  }
+  .social{
+    list-style: none;
+    line-height: 2.5rem;
+  }
+  .social li{
+    color: #fff; 
+    text-align: center; 
+    font-size: 1.8rem;       
+  }
+  .social a{
+    text-decoration: none;
+    
+  }
+  .social span{
+    color: #59A928;
+    font-size: 1.8rem;
+  }
+  .social i{
+    padding: 0.4rem;
+    color: #59A928;
+    font-size: 1.8rem;    
+  }
+  .line--footer{ 
+    display: flex;
+    justify-content: space-between;
+    background-color: #000;
+    width: 100%;
+    padding: 0.6rem 2%;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.6rem;
+  }
+  
+  .text--small{
+    font-size: 1.1rem
+  }
+  
+  /* BARRA ROLAGHEM*/
+  /*
+  ::-webkit-scrollbar-track{
+    background-color: #232c3b;
+  }
+  ::-webkit-scrollbar{
+    width: 6px;
+    background: #f4f4f4;
+  }
+  ::-webkit-scrollbar-thumb{
+    background-color: #59a928;
+    border-radius: 5px;
+  }
+  */
+  /* RESPONSIVO*/
+  
+  @media screen and (max-width: 920px){
+    
+    header > .interface {
+      padding: 1rem 4%;
+    }
+    .menu--desktop{
+      padding: 1.5rem 4%;
+        
+    }
+    .nav--itens{
+      display: none;
+    }
+    
+    /* Main */
+
+    body {
+        background-color: #ffffff;
+        font-family: Arial, sans-serif;
+      }
+      
+      .form-container {
+        background-color: linear-gradient(#c0c0c0, #404040);
+      }
+      
+      .form-input,
+      .form-button {
+        border-radius: 5px;
+      }
+      
+      .form-button {
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+      }
+      
+      .form-button {
+        color: #ffffff;
+      }
+      
+    
+    .coders{
+        flex-wrap: wrap;
+    }
+    .menu--mobile{
+      display: block;
+    }
+    .btn--open{
+      display: block;
+    }
+    .btn--close{
+      display: block;
+    }
+   
+  }
+  @media only screen and (max-width: 640px){
+    .logo img{
+        width: 200px;
+    }
+    .line--footer{
+    flex-direction: column;  
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding: 0.6rem 2% ;
+    }
+    h2.title{
+      font-size: 1.8rem;
+    }
+    h2.title span::after{
+      top: .8rem;
+      width: 50px;
+      height: 0.3rem;
+    }
+    .search-box{
+      justify-content: center;
+    }
+  }
+  
+  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
+  }
+
+  
+
+
